# sybot

./: .gitignore  Cargo.toml  README.md  changelog.md  lua_lib.cmd  syarm_lib.code-workspace  sybot_lib.code-workspace  syproj.json
assets/: pos.json
assets/SyArm_Mk1/: comps.json  info.json  tools.json
assets/SyArm_Mk1/lib/: tools.json
assets/SyArm_Mk1/rcs/: init.json
assets/SyArm_Mk1/rob/: comps.json  meas.json  pins.json  segments.json
assets/SyArm_Mk1/stat/: devices.json  pins.json
docs/: calculation.md  configuration.md  controls.md  platforms.md  robots.md
docs/networking/: custom_connections.md  http.md
docs/robots/: custom_robots.md
examples/: in_action.rs  interpreter.rs  mqtt.rs  webserver.rs
examples/SyArm_Mk1/: Cargo.toml
examples/SyArm_Mk1/assets/SyArm_Mk1/: info.json
examples/SyArm_Mk1/assets/SyArm_Mk1/rob/: comps.json  segments.json
examples/SyArm_Mk1/assets/SyArm_Mk1/scripts/gcode/: fistBump.gcode
examples/drake/: Cargo.toml
examples/drake/assets/DrakeRob/: info.json
examples/drake/assets/DrakeRob/rcs/: init.json
examples/drake/assets/DrakeRob/rob/: comps.json  lk.json  meas.json  segments.json
examples/drake/assets/DrakeRob/stat/: pins.json
examples/drake/src/: main.rs
examples/drawing_robot/: Cargo.toml
examples/drawing_robot/assets/: sample_lines.json
examples/drawing_robot/assets/images/: 1.json  1_1.json  1_2.json  6.json  6_1.json  6_2.json  6_3.json
examples/drawing_robot/src/: main.rs  robot.rs
examples/linear_xy_robot/: Cargo.toml
examples/linear_xy_robot/assets/: plot_sample_lines.py
examples/linear_xy_robot/src/: main.rs
examples/linear_xyz_robot/: Cargo.toml
examples/linear_xyz_robot/src/: main.rs
examples/syarm/: Cargo.toml  pins.json
examples/syarm/assets/SyArm_Mk1/rcs/: init.json
examples/syarm/assets/SyArm_Mk1/rob/: comps.json  meas.json
examples/syarm/assets/SyArm_Mk1/scripts/gcode/: basicYZpos.gcode
examples/syarm/assets/SyArm_Mk1/stat/: pins.json
examples/syarm/lib/: tools.json
examples/syarm/rob/: comps.json  data.json  meas.json  pins.json  segments.json
examples/syarm/src/: main.rs  syarm.rs
examples/syarm/src/lua/: test.lua
examples/syarm/stat/: mdata.json
res/: SyArm_Mk1.conf.json  basicYZpos.gcode  fistBump.gcode  mqtt_test.py  syarm.json  syarm_0.json  syarm_const.json
res/gcode/: pickUp.gcode  simplePickUp.gcode
res/lua/: test.lua
src/: arm.rs  conf.rs  config.rs  desc.rs  http.rs  interpreter.rs  intpr.rs  lib.rs  main.rs  math.rs  mqtt.rs  omats.rs  partlib.rs  pkg.rs  prelude.rs  pvec.rs  rcs.rs  rds.rs  remote.rs  robot.rs  robs.rs  scr.rs  server.rs  stat.rs  types.rs
src/conf/: elem.rs  json.rs  partlib.rs
src/desc/: common.rs  elem.rs  kin.rs
src/http/: websocket.rs
src/intpr/: gcode.rs  gfuncs.rs  lua.rs
src/math/: wo.rs
src/pkg/: comps.rs  elem.rs  info.rs  partlib.rs  pkg.rs
src/rcs/: des.rs  math.rs
src/rds/: desc.rs  rob.rs  seg.rs  stat.rs
src/rds/desc/: basic_xyz.rs
src/rds/rob/: stepper.rs
src/remote/: http.rs  mqtt.rs
src/robot/: act.rs  arm.rs  basic.rs  omat.rs  safe.rs  vars.rs
src/robot/types/: arm.rs
src/robs/: elem.rs  stepper.rs  tool.rs
src/scr/: gcode.rs  lua.rs
src/scr/gcode/: gfuncs.rs
src/server/: conf.rs  websocket.rs
src/tests/: calc.rs  data.rs  mod.rs  movements.rs  remote.rs  robots.rs  scr.rs  test.rs
sybot_ctrl/: Cargo.toml
sybot_ctrl/src/: lib.rs
sybot_pkg/: Cargo.toml  README.md  info.rs  lib.rs  partlib.rs  pins.rs
sybot_pkg/src/: info.rs  lib.rs  partlib.rs  pkg.rs
sybot_rcs/: Cargo.toml  des.rs  lib.rs  math.rs
sybot_rcs/assets/: rcs.json
sybot_rcs/src/: des.rs  lib.rs  test.rs
sybot_robs/: Cargo.toml  device.rs  lib.rs  seg.rs  stepper.rs  structs.rs
sybot_robs/src/: lib.rs  seg.rs  structs.rs
sybot_scr/: Cargo.toml  gcode.rs  lib.rs  lua.rs
sybot_scr/gcode/: gfuncs.rs
sybot_scr/src/: lib.rs  lua_mod.rs
