[package]
name = "sybot"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.9.0-alpha"
description = "Rust library for coordinating components, defining robotic systems and their communication "
edition = "2021"
repository = "https://github.com/SamuelNoesslboeck/sybot"
license-file = "LICENSE"
keywords = [ "framework", "robotics", "automation", "iot", "raspberry-pi" ]
# default-run = "interpreter"

[lib]
name = "sybot"
path = "src/lib.rs"

# [[example]]
# name = "mqtt"
# path = "examples/mqtt.rs"
# required-features = [ "mqtt" ]

# [[example]]
# name = "webserver"
# path = "examples/webserver.rs"
# required-features = [ "http" ]

[dependencies]
actix = { version = "0.13.0", optional = true } 
actix-web = { version = "4", optional = true }
actix-web-actors = { version = "4.1.0", optional = true } 
colored = "2.0.0"
colored_json = "3.0.1"
gcode = "0.6.1"
glam = "0.24.0"
lazy_static = "1.4.0"
message-io = { version = "0.17.0", optional = true }
mlua = { version = "0.8.8", optional = true, features = [ "lua54", "module", "macros", "serialize" ] }
paho-mqtt = { version = "0.12.0", optional = true }
regex = "1.9.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
syact = { version = "0.12.0", path = "../syact" } 

[features]
default = ["mqtt", "msg", "gcode"]

# scripting
gcode = []
lua = ["dep:mlua"]

# platform features
rasp = ["syact/rasp"]

# remote features
http = ["dep:actix", "dep:actix-web", "dep:actix-web-actors"]
mqtt = ["dep:paho-mqtt"]
msg = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace]
exclude = [ "assets" ]
