[package]
name = "sybot"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.10.2"
description = "Rust library for coordinating components, defining robotic systems and their communication "
edition = "2021"
repository = "https://github.com/SamuelNoesslboeck/sybot"
license-file = "LICENSE"
keywords = [ "framework", "robotics", "automation", "iot", "raspberry-pi" ]

[lib]
name = "sybot"
path = "src/lib.rs"

[dependencies]
glam = "0.27.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
syact = { version = "0.13.1" } 
syunit = "0.1.5"
tokio = { version = "1.37.0", features = ["full"] }
