[package]
name = "sybot"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.10.4"
description = "Rust library for coordinating components, defining robotic systems and their communication "
edition = "2021"
repository = "https://github.com/SamuelNoesslboeck/sybot"
license-file = "LICENSE"
keywords = [ "framework", "robotics", "automation", "iot", "raspberry-pi" ]

[lib]
name = "sybot"
path = "src/lib.rs"

[dependencies]
glam = "0.27.0"
mlua = { version = "0.9.8", features = [ "lua54", "vendored" ], optional = true } 
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
syact = { version = "0.13.7" } 
syunit = "0.2.0"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
embedded-hal = "1.0.0"

[features]
default = [ "rockot" ] 
rockot = [ "dep:mlua" ]

# Tests
[[test]]
name = "movements"
path = "tests/movements.rs"
