[package]
name = "sybot_ctrl"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.1.0-alpha"
description = "Structures for (remote) controls of robotic systems"
edition = "2021"
license = "MIT"

[dependencies]
message-io = { version = "0.17.0", optional = true }

[features]
msg = [ ]