[package]
name = "sybot_pkg"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.1.0"
description = "Robot package parsing tool for the sybot_library"
edition = "2021"

[lib]
name = "sybot_pkg"
path = "src/lib.rs"

[[bin]]
name = "dump"
path = "bin/dump.rs"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
stepper_lib = { path = "../../stepper_lib" }

sybot_rcs = { path = "../sybot_rcs" }