[package]
name = "sybot_pkg"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.3.1"
description = "Robot package parsing tool for the sybot_library"
edition = "2021"

[lib]
name = "sybot_pkg"
path = "lib.rs"

[[bin]]
name = "dump"
path = "bin/dump.rs"

[dependencies]
glam = "0.24.0"
lazy_static = "1.4.0"
regex = "1.8.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
stepper_lib = "0.11.5"

sybot_rcs = { path = "../sybot_rcs" }