[package]
name = "sybot_pkg"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.3.2-alpha"
description = "Robot package parsing tool for the sybot"
edition = "2021"
license = "MIT"

[lib]
name = "sybot_pkg"
path = "src/lib.rs"

[[bin]]
name = "dump"
path = "bin/dump.rs"

[dependencies]
glam = "0.24.0"
lazy_static = "1.4.0"
regex = "1.8.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
syact = { version = "0.12.0", path = "../../syact" } 

sybot_rcs = { path = "../sybot_rcs" }