[package]
name = "sybot_rcs"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.1.3"
description = "The coordinate and positioning system of the sybot_library"
edition = "2021"

[lib]
name = "sybot_rcs"
path = "lib.rs"

[dependencies]
glam = "0.24.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"