[package]
name = "sybot_robs"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.2.3"
description = "Robot traits and structures for the sybot_lib"
edition = "2021"

[lib]
name = "sybot_robs"
path = "lib.rs"

[[bin]]
name = "parse"
path = "bin/parse.rs"

[dependencies]
glam = "0.24.0"
stepper_lib = "0.11.5"

sybot_pkg = { path = "../sybot_pkg" }
sybot_rcs = { path = "../sybot_rcs" }