[package]
name = "sybot_scr"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.1.3"
description = "Rua scripting - Lua based robot scripting"
edition = "2021"

[lib]
name = "sybot_scr"
path = "lib.rs"

[dependencies]
gcode = { version = "0.6.1", optional = true }  
glam = "0.24.0"
mlua = { version = "0.8.8", features = [ "lua54", "module", "macros", "serialize" ], optional = true }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
stepper_lib = { version = "0.11.7", features = [ ], path = "../../stepper_lib" }

sybot_pkg = { path = "../sybot_pkg" }
sybot_rcs = { path = "../sybot_rcs" }
sybot_robs = { path = "../sybot_robs" }

[features]
default = [ ]
lua = [ "dep:mlua" ]
gcode = [ "dep:gcode" ]