[package]
name = "drake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
stepper_lib = "0.11.5"
sybot_lib = { path = "../../", features = [ "gcode", "mqtt" ]}
tokio = { version = "1.28.2", features = [ "macros", "rt-multi-thread" ]}

[workspace]