[package]
name = "drake"
author = "Samuel Nösslböck <samuel.noesslboek@gmail.com>"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.24.0"
stepper_lib = { version = "0.11.7", path = "../../../stepper_lib" }
sybot_lib = { path = "../../", features = [ "gcode", "mqtt" ]}
tokio = { version = "1.28.2", features = [ "macros", "rt-multi-thread" ]}

[features]
rasp = [ "sybot_lib/rasp" ]

[workspace]