[package]
name = "drawing_robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
indicatif = "0.17.7"
serde = "1.0.193"
serde_json = "1.0.108"

syact = { path = "../../../syact" }
sybot = { path = "../../" }

[features]
rasp = [ "syact/rasp", "sybot/rasp" ]

[workspace]
