[package]
name = "drawing_robot"
version = "0.1.0"
edition = "2021"
default-run = "drawing_robot_sys"

[[bin]]
name = "drawing_robot_sys"
path = "src/main.rs"

[[bin]]
name = "fonts"
path = "bin/fonts.rs"

[dependencies]
clap = "4.4.11"
env_logger = "0.10.1"
log = "0.4.20"
indicatif = "0.17.7"
serde = "1.0.193"
serde_json = "1.0.108"

# font-kit = "0.12.0"
# raqote = "0.8.3"

syact = { path = "../../../syact" }
sybot = { path = "../../" }

[features]
rasp = [ "syact/rasp", "sybot/rasp" ]

[workspace]

