[package]
name = "linear_xy_robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syact = { path = "../../../syact" }
sybot = { path = "../../" }

[features]
rasp = [ "syact/rasp", "sybot/rasp" ]

[workspace]