[package]
name = "linear_xy_robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_json = "1.0.108"

syact = { path = "../../../syact" }
sybot = { path = "../../" }

[features]
rasp = [ "syact/rasp", "sybot/rasp" ]

[workspace]