[package]
name = "syarm"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.24.0"
rustyline = "11.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
stepper_lib = { version = "0.11.7", path = "../../../stepper_lib" }
sybot_lib = { path = "../../", features = [ "gcode", "mqtt" ]}
tokio = { version = "1.28.2", features = [ "macros", "rt-multi-thread" ]}

[features]
rasp = [ "sybot_lib/rasp" ]

[workspace]