[package]
name = "syarm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.3.12"
glam = "0.24.0"
rustyline = "11.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
syact = { version = "0.12.0", path = "../../../syact" }
sybot = { path = "../../", features = [ "gcode", "mqtt" ]}
tokio = { version = "1.28.2", features = [ "macros", "rt-multi-thread" ]}

[features]
rasp = [ "sybot/rasp" ]

[workspace]